--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,15 @@
-name: 🚀 Micro FE News Auto Build and Deploy
+name: 🧩 Deploy Micro Frontend
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
   workflow_dispatch:
 
 env:
-  # 阿里云 ACR 配置（与主站相同）
   REGISTRY: crpi-q2c5la9qn25hswu3.cn-hangzhou.personal.cr.aliyuncs.com
   NAMESPACE: yinguzwg
-  APP_NAME: mirco-fe-news
-  CONTAINER_NAME: mirco-fe-news-app
+  APP_NAME: mirco-fe
+  CONTAINER_NAME: mirco-fe-app
   PORT: 3002
 
 permissions:
@@ -20,19 +19,15 @@ permissions:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     outputs:
-      short_sha_tag: ${{ steps.extract_tag.outputs.short_sha_tag }}
-    
+      image_tag: ${{ steps.meta.outputs.tags }}
+
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
 
       - name: 🔧 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          driver: docker-container
-          install: true
 
       - name: 🔐 Log in to Aliyun ACR
         uses: docker/login-action@v3
@@ -41,98 +36,42 @@ jobs:
           username: ${{ secrets.ALIRUN_USER }}
           password: ${{ secrets.ALIRUN_PWD }}
 
-      - name: 🏷️ Extract image metadata
+      - name: 🏷️ Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.APP_NAME }}
           tags: |
-            type=sha,prefix=${{ github.ref_name }}-,format=short
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha,prefix=,format=short
+            type=raw,value=latest
 
-      - name: 📌 Extract short SHA tag
-        id: extract_tag
-        run: |
-          SHORT_SHA_TAG=$(echo "${{ steps.meta.outputs.tags }}" | tr ',' '\n' | grep "${{ github.ref_name }}-" | head -1)
-          echo "short_sha_tag=$SHORT_SHA_TAG" >> $GITHUB_OUTPUT
-          echo "✅ 提取短 SHA 标签：$SHORT_SHA_TAG"
-
-      - name: 🏗️ Build and push Docker image
+      - name: 🏗️ Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          build-args: |
-            NODE_ENV=production
-          platforms: linux/amd64
 
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-    
-    steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v4
 
-      - name: 🚀 Deploy to Aliyun Server (Docker)
+    steps:
+      - name: 🚀 Deploy to Server
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.PORT || 22 }}
-          command_timeout: "900s"
           script: |
-            set -euo pipefail
-            
-            # 变量定义
-            IMAGE_REPO="${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.APP_NAME }}"
-            SHORT_SHA_TAG="${{ needs.build-and-push.outputs.short_sha_tag }}"
-            LATEST_TAG="$IMAGE_REPO:latest"
-            CONTAINER_NAME="${{ env.CONTAINER_NAME }}"
-            PORT="${{ env.PORT }}"
-
-            echo "🔐 登录阿里云 ACR..."
-            echo "${{ secrets.ALIRUN_PWD }}" | docker login ${{ env.REGISTRY }} -u ${{ secrets.ALIRUN_USER }} --password-stdin
-
-            echo "📥 拉取镜像: $SHORT_SHA_TAG..."
-            if ! docker pull "$SHORT_SHA_TAG"; then
-              echo "⚠️ 短 SHA 拉取失败，尝试 latest..."
-              docker pull "$LATEST_TAG"
-              TARGET_IMAGE="$LATEST_TAG"
-            else
-              TARGET_IMAGE="$SHORT_SHA_TAG"
-            fi
-
-            echo "🛑 清理旧容器..."
-            docker ps -q -f name=$CONTAINER_NAME | xargs -r docker stop
-            docker ps -aq -f name=$CONTAINER_NAME | xargs -r docker rm
-
-            echo "🚀 启动新容器..."
+            docker pull ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.APP_NAME }}:latest
+            docker stop ${{ env.CONTAINER_NAME }} || true
+            docker rm ${{ env.CONTAINER_NAME }} || true
             docker run -d \
-              --name "$CONTAINER_NAME" \
+              --name ${{ env.CONTAINER_NAME }} \
               --restart unless-stopped \
-              -p "$PORT:3002" \
-              -e NODE_ENV=production \
-              "$TARGET_IMAGE"
-
-            echo "🧹 清理旧镜像..."
-            docker image prune -f
-
-            echo "🔍 健康检查..."
-            for i in {1..10}; do
-              if curl -s "http://localhost:$PORT" > /dev/null; then
-                echo "🎉 微前端部署成功！访问 http://localhost:$PORT"
-                exit 0
-              fi
-              echo "等待应用启动... ($i/10)"
-              sleep 5
-            done
-            echo "❌ 健康检查失败"
-            exit 1
+              -p ${{ env.PORT }}:3002 \
+              ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.APP_NAME }}:latest
